Add connection to backend API
